src/assets/sass/index.scss
/* Import bootstrap styles from npm package */
@import "~bootstrap/dist/css/bootstrap.min.css";
@import "./_0.declare-light";
@import "./components/pagination";
@import "./components/actions";
/* stylelint-disable no-descending-specificity */

.clear {
  clear: both;
}

html,
body {
  height: 100%;
  background: $mainbgcolor;
}

html body {
  color: $defaulttextcolor;
  font-size: $defaultbodysize;
}

a {
  color: $defaultlinkcolor;

  &:hover {
    color: $defaultlinkcolor;
    text-decoration: none;
  }
}

.well {
  min-height: 20px;
  padding: 5px;
  margin-bottom: 90px;
  background-color: $appwhite;

  h2 {
    padding-bottom: 10px;
    font-weight: 900;
  }

  .btn-dark {
    margin-left: 0;
  }
}

.flex {
  display: flex;
}

.navbar-default .navbar-nav > li.dropdown:hover > a,
.navbar-default .navbar-nav > li.dropdown:hover > a:hover,
.navbar-default .navbar-nav > li.dropdown:hover > a:focus {
  background-color: rgb(231, 231, 231);
  color: rgb(85, 85, 85);
}

label {
  font-weight: 300;
  color: $black;
  margin-bottom: 0;
}

.form-check-label {
  margin-left: 5px;
}

.form-control {
  font-size: 14px;
  color: $black;
  border-radius: 0;

  &:focus,
  &:active {
    color: $black;
    border-color: $appblue;
    box-shadow: none;
  }

  &::placeholder {
    color: $appgrey;
  }
}

.custom-select,
.input-group-text {
  border-radius: 0;
}

li.dropdown:hover > .dropdown-menu {
  display: block;
}

.vue-grid-layout {
  transition: none !important;
}

.vue-grid-item {
  transition: none !important;
  overflow-x: hidden;
  overflow-y: auto;

  &:not(.vue-grid-placeholder) {
    background: #fff;
  }

  &.resizing {
    opacity: 0.9;
  }

  .text {
    font-size: 24px;
    text-align: center;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    height: 100%;
    width: 100%;
  }

  .blockname {
    float: left;
    text-transform: uppercase;
    font-size: 18px;
    width: 100%;
    margin: 0;
    padding: 0;
    font-weight: bold;
  }

  .block_header {
    float: left;
    font-size: 12px;
    width: 100%;
    padding: 0 0 10px;
    margin: 0 0 1px;
    border-bottom: solid 2px rgba($defaultfirstlinecolor, 0.25);
  }

  .block_footer {
    float: left;
    font-size: 12px;
    width: 100%;
    height: auto;
    padding: 10px 0 0;
    margin: 0;
  }

  .form_row {
    position: relative;
    width: 100%;
    float: left;
    margin: 0 0 1px;
    padding: 0 0 7px;
  }

  .block_view_fields {
    .form_row {
      border-bottom: solid 1px rgba($defaultlinecolor, 0.25);
    }
  }

  .block_edit_fields {
    .form_row {
      margin: 7px 0 0;
      padding: 0;
    }
  }

  .form_label {
    color: rgba($defaulttextcolor, 0.75);
    display: block;
    font-size: 0.9em;
    margin: 0;
    padding: 0;
    text-align: left;
    font-weight: normal;
  }

  .form_value_viewing_mode {
    color: $defaulttextcolor;
    display: block;
    font-size: 1em;
    margin: 0;
    padding: 0;
    text-align: left;
    font-weight: bold;
  }

  input[type],
  textarea,
  select {
    /*    background-color: transparent;
    border: 1px solid $appgrey;
    border-radius: 0;
    box-sizing: border-box;
    color: $defaulttextcolor;
    display: block;
    font-size: 1em;
    font-weight: 700;
    margin: 2px 0 8px;
    padding: 6px;
    width: 100%; */

    &:focus {
      border: 1px solid $appblue;
    }
  }

  input[type] {
    font-weight: 300;
  }

  input[type="radio"],
  input[type="checkbox"] {
    /*    background-color: transparent;
    border-radius: 5px;
    box-sizing: border-box;
    color: $defaulttextcolor;
    font-size: 1em;
    font-weight: 700;
    margin: 2px 0 8px;
    padding: 6px; */
  }
}

input {
  border-radius: 0;
  border: 1px solid $appgrey;
  font-size: 14px;

  &:focus:invalid {
    border-color: $appred;
  }

  &[type="url"],
  &[type="email"] {
    &:invalid {
      border-color: $appred;
    }
  }
}

.col-form-label {
  padding-bottom: 0;
}

.table {
  td {
    word-break: break-word;
    padding: 5px;
    vertical-align: middle;
    border: none;
  }

  thead {
    th {
      border-bottom: 1px solid $appcream;
    }
  }
}

table {
  &.sticky-header {
    th {
      position: sticky;
      top: -1px;
      background: $white;
      box-shadow: 0 1px $appcream;
    }
  }
}

.ql-editor {
  min-height: 150px;
}

.modal-title {
  font-weight: 900;
}

.modal-body {
  textarea {
    display: block;
    width: 100%;
  }

  .form-control {
    margin-bottom: 10px;
  }
}

.modal-footer {
  .btn {
    border: solid 1px $appgrey;
    padding: 0.25em 1em;
    border-radius: 1.5em;
    transition: color 0.2s, background-color 0.2s;
    background-color: transparent;
  }

  .btn-dark {
    background-color: $appgrey;
    color: white;

    &:hover {
      color: $appgrey;
      background-color: white;
    }
  }
}

.tooltip {
  font-size: 14px;
}

.v-select {
  .open-indicator {
    display: none;

    &::before {
      display: none;
    }
  }

  .dropdown-toggle {
    border-radius: 0 !important;
    max-height: 29px;
    border: 1px solid $appgrey;

    &::after {
      display: none;
    }
  }
}

.ql-toolbar.ql-snow .ql-picker-label {
  margin-top: -5px;
}

input[type="checkbox"] {
  font-size: 16px;
}

@media (min-width: $wideminwidth) {
  .modal-dialog {
    min-width: 700px;
  }

  .well {
    padding: 15px;
  }
}

